[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/bars/ring.png" type="Texture" id=1]
[ext_resource path="res://scripts/Game.gd" type="Script" id=2]
[ext_resource path="res://scenes/ChampionPanel.tscn" type="PackedScene" id=3]

[node name="Game" type="Node"]
script = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="TimeBar" type="TextureProgress" parent="."]
margin_right = 240.0
margin_bottom = 240.0
rect_scale = Vector2( 0.25, 0.25 )
max_value = 50.0
value = 30.0
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 1 )
fill_mode = 4
tint_under = Color( 0.627451, 1, 0.458824, 1 )
tint_over = Color( 0.819608, 0.0509804, 0.0509804, 1 )
tint_progress = Color( 0.964706, 0.584314, 0.0470588, 1 )

[node name="ChampionPanel" parent="." instance=ExtResource( 3 )]
visible = false
margin_left = 100.0
margin_top = 100.0
margin_right = -924.0
margin_bottom = -500.0

[node name="Action" type="HBoxContainer" parent="."]
visible = false
margin_left = 100.0
margin_top = 200.0
margin_right = 100.0
margin_bottom = 200.0

[node name="TextureRect1" type="TextureRect" parent="Action"]

[node name="TextureRect2" type="TextureRect" parent="Action"]
margin_left = 4.0
margin_right = 4.0

[node name="TextureRect3" type="TextureRect" parent="Action"]
margin_left = 8.0
margin_right = 8.0

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
